Bugfix: fixed the overflow of dropdown panels in tabbed action lists

--- a/cocktail/ui/resources/styles/cocktail-ui-tabbedactionlist--tab.scss
+++ b/cocktail/ui/resources/styles/cocktail-ui-tabbedactionlist--tab.scss
@@ -4,10 +4,12 @@
 :host {
     background: none;
     padding: 0;
+    overflow: visible;
 }
 
 #content {
     display: flex;
     align-content: stretch;
+    overflow: visible;
 }
 
